--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+ - Improve documentation.
+ - Add 'found' option for always loading from specific files.
+
 0.001002    Feb 2, 2013
  - fix copyright attribution
 
