--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+ - fix module NAME in Makefile.PL
+ - minor doc corrections
+ - fix in-memory file test on perl 5.6
+
 0.002000    Feb 11, 2013
  - Improve documentation.
  - Add 'found' option for always loading from specific files.
