--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-0.002000    Nov 23, 2013
+ - include README in dist
+ - include additional metadata
+
+0.002001    Nov 23, 2013
  - fix module NAME in Makefile.PL
  - minor doc corrections
  - fix in-memory file test on perl 5.6
