--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Module-Reader
 
+  - releasing as stable
+
 0.003_001 - 2016-11-30
   - fix links and formatting in pod
   - fix some edge cases with arrayref hooks
